yamls/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-level
  namespace: level3
spec:
  selector:
    unlock: level4
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
