yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-level
  labels:
    kubernetes.io/ingress.class: level5
spec:
  rules:
  - host: next.test.local
    http:
      paths:
      - backend:
          service:
            name: dummy
            port:
              number: 80
        path: /
        pathType: Exact
